cmake_minimum_required(VERSION 3.23)
project(GSSS_SEP_CSE_B2_CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(GSSS_SEP_CSE_B2_CPP main.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_0 NumberPyramid.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_1 FindAndPrintDuplicatesInArray.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_2 ReplaceAllOccurrencesOfACharacter.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_3 OOPS/BasicOOPs.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_4 OOPS/OOPSWithConstructor.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_5 OOPS/StudentWithSetData.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_6 OOPS/ClassCar.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_7 OOPS/DayOfWeek.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_8 OOPS/PaddingAndGreedyAlignment.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_9 OOPS/Encapsulation.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_10 OOPS/Inheritance.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_11 OOPS/BankingApplication.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_12 OOPS/Polymorphism.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_13 OOPS/Overloading.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_14 OOPS/OperatorOverloading.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_15 OOPS/ShapeAndArea.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_16 OOPS/Abstraction.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_17 OOPS/MediaPlayer.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_18 OOPS/AddMoney.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_19 OOPS/Exceptions.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_20 StructuresAndUnions/BasicStructure.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_21 StructuresAndUnions/BasicUnion.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_22 StructuresAndUnions/PointStruct.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_23 StructuresAndUnions/OnlineStore.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_24 StructuresAndUnions/CelsiusFahrenheit.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_25 StructuresAndUnions/StudentInfo.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_26 DMA/SimpleDataTypeMemAlloc.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_27 DMA/DynamicArrayOfIntegerAndString.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_28 DMA/DynamicArrayOfObjects.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_29 STL/Vectors.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_30 STL/STLList.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_31 STL/STLSet.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_32 STL/UnorderedSet.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_33 STL/SumOfVectorElements.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_34 STL/VectorMatrix.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_35 STL/CommonInThreeSets.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_36 Files/ReadFile.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_37 Files/ReadWriteFile.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_38 Files/StoryToFileAndBack.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_39 StructuresAndUnions/SortStructureMultipleRules.cpp)
add_executable(GSSS_SEP_CSE_B2_CPP_40 STL/SplittingAndMergingList.cpp)

